# zephyr-example

./: .clang-format  .gitignore  Dockerfile  README.md
.devcontainer/: devcontainer.json
.github/workflows/: build-container.yml  build.yml
.west/: config
application/: CMakeLists.txt  ZephyrAppConfig.cmake  prj.conf  west.yml
application/protobuf/: storage.proto
application/scripts/: west-commands.yml
application/scripts/west-commands/: clang-format.py
application/src/: CMakeLists.txt  main.cpp
application/src/os/: kernel.hpp
application/src/protobuf/: protobuf_error.cpp  protobuf_error.hpp  protobuf_message.cpp  protobuf_message.hpp
application/src/storage/: non_volatile_storage.cpp  non_volatile_storage.hpp
application/src/util/: README.md  system_error.cpp  system_error.hpp
application/src/util/system_error/: errc.hpp  error_category.cpp  error_category.hpp  error_code.hpp  error_condition.hpp
application/tests/integration/: CMakeLists.txt  non_volatile_storage.cpp  prj.conf  testcase.yaml
application/tests/unit/: CMakeLists.txt  main.cpp  prj.conf  testcase.yaml
applications/: west-commands.py  west-commands.yml  west.yml
applications/example/: CMakeLists.txt  prj.conf  sysbuild.conf
applications/example/boards/: nucleo_g474re.overlay  nucleo_g474re_flash.dtsi
applications/example/sysbuild/mcuboot/boards/: nucleo_g474re.overlay
